--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/minimist": "^1.2.2",
     "@types/normalize-package-data": "^2.4.1",
     "discord.js": "^13.6.0",
+    "enmap": "^5.8.8",
     "fs": "^0.0.1-security"
   }
 }
