--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
     "url": "https://github.com/liberatos278/discord.ts-framework.git"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon dist/main.js"
   },
   "author": "Liberatos",
   "license": "MIT",
   "dependencies": {
+    "@types/minimist": "^1.2.2",
+    "@types/normalize-package-data": "^2.4.1",
     "discord.js": "^13.6.0",
     "enmap": "^5.8.8",
-    "fs": "^0.0.1-security",
-    "@types/minimist": "^1.2.2",
-    "@types/normalize-package-data": "^2.4.1"
+    "fs": "^0.0.1-security"
   },
   "devDependencies": {
+    "nodemon": "^2.0.15",
     "typescript": "^4.6.2"
   }
 }
